[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
aws-config = "1.5.10"
aws-sdk-ec2 = "1.96.0"
aws-types = "1.3.3"
base64 = "0.22.1"
itertools = "0.13.0"
lettre = "0.11.11"
rusoto_core = { version = "0.48.0" }
rusoto_ses = { version = "0.48.0" }
structopt = "0.3.26"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
