[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
aws-config = "1.5.10"
aws-sdk-ec2 = "1.96.0"
aws-types = "1.3.3"
base64 = "0.22.1"
itertools = "0.13.0"
lettre = "0.11.11"
reqwest = { version = "0.12.9", features = ["blocking"] }
rusoto_core = { version = "0.48.0" }
rusoto_ses = { version = "0.48.0" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
structopt = "0.3.26"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.query]
git = "https://gitlab.com/fieldkit/libraries/rustfk.git"
rev = "df41bfd9a53423db55e312c9e6fda5d19f659a8e"
